--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -10,3 +10,9 @@ jobs:
     steps:
       - name: "Print what we are doing"
         run: echo "Hello we are running in github action"
+      - name: "Download Docker install script"
+        run:  curl -fsSL https://get.docker.com -o get-docker.sh
+      - name: Install Docker with script
+        run: sudo sh ./get-docker.sh 
+      - name: Check if docker is installed
+        run: docker version
