--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -8,6 +8,8 @@ jobs:
   build_backend_docker_file:
     runs-on: ubuntu-latest
     steps:
+       - name: Checkout repository
+        uses: actions/checkout@v3
       - name: "Print what we are doing"
         run: echo "Hello we are running in github action"
       - name: "Download Docker install script"
