--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -20,6 +20,7 @@ jobs:
         run: docker login -u simplewilliamz -p ${{ secrets.DOCKER_PASSWORD }}
   build_backend_docker_file:
     runs-on: ubuntu-latest
+    needs: setupSytem
     steps:
       - name: Navigate to backend folder
         run: echo "Going to backend"
@@ -29,6 +30,7 @@ jobs:
         run: docker push simplewilliamz/backend-go-api
   build_frontend_docker_file:
     runs-on: ubuntu-latest
+    needs: setupSytem
     steps:
       - name: Navigate to frontend folder
         run: echo "Go frontend folder"
